--- a/Issue Tracker v-2/client/index.html
+++ b/Issue Tracker v-2/client/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="./Login_v1/css/util.css">
 	<link rel="stylesheet" type="text/css" href="./Login_v1/css/main.css">
 	<link rel="stylesheet" href="./bower_components/sweetalert/dist/sweetalert.css">
+	<!-- Loda Harbola--!>
 <!--===============================================================================================-->
 
 <script src="./bower_components/angular/angular.min.js"></script>
